# mpl

./: Cargo.toml  package-lock.json  package.json  spec.md
.github/workflows/: ci.yaml  release.yaml
doc/adr/: 0003-ifdef.md  0004-system-parameters.md  0005-whole-window.md  0006-extend.md  0007-string-interpolation.md
extra/mpl-language-server/: Cargo.toml
extra/mpl-language-server-wasm/: Cargo.toml
extra/mpl-language-server-wasm/src/: lib.rs  system_params.rs
extra/mpl-language-server/src/: completions.rs  declared_params.rs  diagnostics.rs  lib.rs  lints.rs  parser.rs  system_params.rs  tokenize.rs  visit.rs
extra/mpl-language-server/src/completions/: tests.rs
extra/mpl-language-server/src/diagnostics/: tests.rs
extra/mpl-language-server/src/lints/: tests.rs
extra/mpl-language-server/src/tokenize/: tests.rs
extra/mpl-playground/: Cargo.toml
playground/: charts.test.ts  charts.ts  completion-e2e.test.ts  datasets.json  editor.test.ts  editor.ts  index.html  integration.test.ts  main.ts  package.json  params.test.ts  params.ts  styles.css  tsconfig.json  vite.config.ts
playground/e2e/: completion.spec.ts
playground/examples/: align-rate.mpl  ifdef-else.mpl  ifdef.mpl  intra-region.mpl  params.mpl  route-label.mpl  self-calls.mpl  tag-vs-tag.mpl
src/: enc_regex.rs  errors.rs  lib.rs  linker.rs  mpl.pest  parser.rs  query.rs  tags.rs  tests.rs  types.rs  visitor.rs  wasm.rs
src/parser/: tests.rs
src/query/: fmt.rs  tests.rs
src/wasm/: completions.rs  diagnostics.rs  lints.rs  system_params.rs  tokenize.rs
tests/: parse.rs
tests/examples/: align-rate.mpl  extend.mpl  filtered-histogram.mpl  group-by.mpl  (+4 more)
(+10 files in other folders)
