[package]
name = "mpl-language-server-wasm"
version = "0.5.8"
edition = "2024"
authors = ["Seoyoung Lee <seoyoung@axiom.co>", "Arne Bahlo <arne@axiom.co>", "Heinz Gies <heinz@axiom.co>", "Samuel Cristobal <samu@messy.page>"]
description = "WebAssembly bindings around mpl-language-server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axiomhq/mpl"
rust-version = "1.92.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpl-language-server = { path = "../mpl-language-server" }
mpl-lang = { path = "../..", default-features = false }
serde = "1"
serde_json = "1"
ron = "0.12"
wasm-bindgen = "0.2.108"
serde-wasm-bindgen = "0.6.5"

[features]
default = []
examples = ["mpl-language-server/examples"]
