[package]
name = "mpl-language-server"
version = "0.5.6"
edition = "2024"
authors = ["Seoyoung Lee <seoyoung@axiom.co>", "Arne Bahlo <arne@axiom.co>", "Heinz Gies <heinz@axiom.co>", "Samuel Cristobal <samu@messy.page>"]
description = "Language services for MPL: completions, diagnostics, tokenization, lints, hover"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axiomhq/mpl"
rust-version = "1.92.0"

[lib]

[dependencies]
mpl-lang = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8.6"
strsim = "0.11.1"
miette = { version = "7.6.0", features = ["serde"] }

[features]
default = []
examples = ["mpl-lang/examples"]

[dev-dependencies]
test-case = "3"
regex = "1"
